[package]
name = "pagerduty-rs"
version = "0.0.1"
authors = ["Archis Gore <archis@polyverse.com>"]
edition = "2018"
license-file = "LICENSE"
categories = ["pagerduty", "alerting"]
keywords = ["pagerduty", "alerts", "events", "incidents", "monitoring"]
readme = "README.md"
repository = "https://github.com/polyverse/pagerduty-rs"

description = """PagerDuty API from Rust."""


[features]
default = ["ureq"]
async = ["futures", "futures-util", "tokio", "hyper", "hyper-tls"]

[dependencies]
url = "2.2.0"
time = {version = "0.2.23", features = ["std", "serde"]}
serde = "1.0.118"
serde_json = {version = "1.0.60" }

# Optional - Only when using sync
ureq = {version = "1.5.4", optional = true }

# Optional - only enabled through the "async" feature
futures = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", optional = true }
hyper = { version = "0.13.9", optional = true }
hyper-tls = {version = "0.4.3", optional = true}

# Because Rust is old enough to have dependency hell now
# https://github.com/hyperium/hyper/issues/2302
tokio = { version = "0.2.24", features = ["rt-core", "macros"], optional = true }


[dev-dependencies]
assert_matches = "1.4.0"
pretty_assertions = "0.6.1"
rand = "0.8.0"
tokio-test = "0.3.0"
