[package]
name = "pagerduty-rs"
version = "0.1.1"
authors = ["Archis Gore <archis@polyverse.com>"]
edition = "2018"
license-file = "LICENSE"
categories = ["pagerduty", "alerting"]
keywords = ["pagerduty", "alerts", "events", "incidents", "monitoring"]
readme = "README.md"
repository = "https://github.com/polyverse/pagerduty-rs"

description = """PagerDuty API from Rust."""


[features]
default = ["async"]

# Enable reqwest's blocking client on sync
sync = ["reqwest/blocking"]

# Need futures for Async
async = []

[dependencies]
url = "2.2.0"
time = {version = "0.2.23", features = ["std", "serde"]}
serde = "1.0.118"
reqwest = { version = "0.11.0", features = ["json"]}

[dev-dependencies]
assert_matches = "1.4.0"
pretty_assertions = "0.6.1"
rand = "0.8.1"
tokio = { version = "1.0.1", features = ["rt", "macros"]}
serde_json = "1.0.61"
