[package]
name = "pagerduty-rs"
version = "0.1.5"
authors = ["Archis Gore <archis@polyverse.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["pagerduty", "alerting"]
keywords = ["pagerduty", "alerts", "events", "incidents", "monitoring"]
readme = "README.md"
repository = "https://github.com/polyverse/pagerduty-rs"

description = """PagerDuty API from Rust."""


[features]
default = ["async", "reqwest/default"]

# Enable reqwest's blocking client on sync
sync = ["reqwest/blocking"]

# Need futures for Async
async = []

rustls = ["reqwest/rustls"]

[dependencies]
url = "2.2.2"
time = {version = "0.3.5", features = ["std", "serde", "formatting", "macros"]}
serde = {version = "1.0.132", features = ["derive"]}
reqwest = { version = "0.11.8", default-features = false, features = ["json"]}

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.0.0"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["rt", "macros"]}
serde_json = "1.0.73"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

